Paquete de iconos

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -39,3 +39,4 @@ button {
 .texto-secundario {
   color: var(--color-texto-secundario);
 }
+/* -------------------------------------------------------------------------- */
