--- a/src/css/app.css
+++ b/src/css/app.css
@@ -221,6 +221,7 @@ button {
 .boton-camara {
   margin-left: 0.5rem;
   padding: 0.3rem;
+  color: var(--color-texto-principal);
   background-color: var(--color-superficie);
   border: 1px solid var(--color-borde);
   border-radius: 4px;
