--- a/src/css/app.css
+++ b/src/css/app.css
@@ -710,6 +710,10 @@ button {
 /* -------------------------------------------------------------------------- */
 /* Camara ubicaciones */
 .feedback-codigo-escaneado {
+  position: absolute;
+  bottom: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
   background-color: var(--sombra-boton);
   padding: 1rem 1.5rem;
   border-radius: 12px;
@@ -718,6 +722,7 @@ button {
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
+  z-index: 10;
 }
 .texto-feedback {
   font-size: 1rem;
